ingress_example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secoda
  namespace: secoda
spec:
  ingressClassName: REPLACE_WITH_YOUR_INGRESS
  defaultBackend:
    service:
      name: secoda
      port:
        number: 443
  rules:
    - host: secoda.mydomain.com # REPLACE WITH YOUR DOMAIN
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: secoda
                port:
                  number: 443
